...
                    android:layout_height="wrap_content"
                    android:text="Thu 10am"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/viewDetailsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="View Details" />

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>

